--- a/resources/sass/footer.scss
+++ b/resources/sass/footer.scss
@@ -1,7 +1,7 @@
 @import './colori.scss';
     footer{
         height: calc(100% - 250px);
-        background-image: url('../assets/footer-bg.jpg');
+        background-image: url('../../public/img/footer-bg.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         .wrapper-top{
