--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -3,8 +3,12 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    margin:20px 0;
     .comic{
         width: calc(100% / 6 - 1rem);
+        h4{
+            margin: 10px 0;
+        }
         .comics-img{
             width: 100%;
             height: 200px;
@@ -21,7 +25,6 @@
 main{
     background-color: $backgrund_main;
     color: $color_text;
-    line-height: 100px;
     padding: 30px;
     position: relative;
 }
